5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1638_2728.log
== TEST (2019-04-11 11:31:08) 
-- CODE:
perc = float(input("Quilometros da viagem: "))
car = input("Tipo de carro(A/B): ").upper()
if(car == "A"):
	total = perc / 8
else:
	total = perc / 12
print(total)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:31:18) 
-- CODE:
perc = float(input("Quilometros da viagem: "))
car = input("Tipo de carro(A/B): ").upper()
if(car == "A"):
	total = perc / 8
else:
	total = perc / 12
print(round(total,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:31:23) 
-- CODE:
perc = float(input("Quilometros da viagem: "))
car = input("Tipo de carro(A/B): ").upper()
if(car == "A"):
	total = perc / 8
else:
	total = perc / 12
print(round(total,2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:31:31) 
-- CODE:
perc = float(input("Quilometros da viagem: "))
car = input("Tipo de carro(A/B): ").upper()
if(car == "A"):
	total = perc / 8
else:
	total = perc / 12
print(round(total,2))
-- EXECUTION TIME:
0.158866
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
